--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Courses",
+  "name": "movies",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2"
   }
